# OS-251

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CTestCustom.cmake  LICENSE  Makefile  OS-251.code-workspace  OS-251.jucer  README.md  gon.json  lint.sh  run_compdb.sh
.github/workflows/: clang-format.yaml  lint.yaml  test.yaml  test_and_release.yaml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: ParamSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthEngine.h
assets/presets/: Default.oapreset
assets/presets/Factory/Bass/: Bass0.oapreset  Bass1.oapreset  Bass2.oapreset  Bass3.oapreset
assets/presets/Factory/FX/: FX0.oapreset  FX1.oapreset  FX2.oapreset  FX3.oapreset
assets/presets/Factory/Key/: Key0.oapreset  Key1.oapreset  Key2.oapreset  Key3.oapreset
assets/presets/Factory/Pad/: Pad0.oapreset  Pad1.oapreset  Pad2.oapreset  Pad3.oapreset
benchmark/: CMakeLists.txt  Main.cpp
benchmark/OS-251-benchmark/: OS-251-benchmark.jucer
benchmark/OS-251-benchmark/JuceLibraryCode/: JuceHeader.h
benchmark/OS-251-benchmark/Source/: Main.cpp
distro/Linux/: readme.txt
distro/Windows/: OS-251.iss
distro/macOS/: OS-251.pkgproj
installer/Windows/: OS-251.iss
scripts/gen_film_strip/: gen_film_strip.py
src/: AudioBufferMock.h  AudioProcessorStateMock.h  CMakeLists.txt  Chorus.cpp  Chorus.h  DspCommon.h  Envelope.cpp  Envelope.h  FancyLookAndFeel.h  Filter.h  GlobalVariables.cpp  GlobalVariables.h  Hpf.h  IAudioBuffer.h  IAudioProcessorState.h  IPositionInfo.h  JuceAudioBuffer.h  JuceAudioProcessorState.h  JucePositionInfo.h  Lfo.h  MasterVolume.h  Oscillator.h  ParamSlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PositionInfoMock.h  SynthEngine.cpp  SynthEngine.h  SynthParams.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
src/adapters/: JuceAudioBuffer.h  JucePositionInfo.h  JuceSynthEngineAdapter.h
src/assets/presets/: Default.oapreset
src/dsp/: Chorus.cpp  DspCommon.h  Envelope.cpp  Envelope.h  Filter.h  Hpf.h  Lfo.h  MasterVolume.h  Oscillator.h
src/jsui/: package-lock.json  package.json  tsconfig.json  webpack.config.js
src/jsui/src/: App.js  App.tsx  ButtonModule.js  ButtonModule.tsx  ClippingIndicator.ts  Colors.ts  DummyModule.tsx  Label.js  Label.tsx  Menu.tsx  ModuleColors.ts  ModuleStyles.ts  ParamValueType.ts  ParameterSlider.tsx  ParameterToggleButton.js  ParameterToggleButton.tsx  ParameterValueStore.tsx  PresetManager.ts  SliderModule.js  SliderModule.tsx  index.tsx
src/params/: ChorusParams.h  EnvelopeParams.h  EnvelopeParamsMock.h  FilterParams.h  FilterParamsMock.h  HpfParams.h  HpfParamsMock.h  LfoParams.h  LfoParamsMock.h  MasterParams.h  MasterParamsMock.h  OscillatorParams.h  OscillatorParamsMock.h  ParamCommon.h
src/services/: FactoryPresets.h  Logger.h  PresetManager.cpp  PresetManager.h  TmpFileManager.h
src/synth/: ISynthUi.h  SynthEngine.cpp  SynthEngine.h  SynthParams.h  SynthSound.h  SynthUi.h  SynthVoice.cpp  SynthVoice.h
src/views/: Body.cpp  Body.h  BodyView.cpp  BodyView.h  ButtonParamLookAndFeel.h  ClippingIndicatorView.cpp  ClippingIndicatorView.h  GlobalLookAndFeel.h  PresetManagerView.cpp  PresetManagerView.h  PresetMenuLookAndFeel.h  colors.h
src/views/look_and_feels/: IntParamLookAndFeel.cpp  IntParamLookAndFeel.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  SliderLookAndFeel.cpp  SliderLookAndFeel.h  ToggleSwitchLookAndFeel.cpp  ToggleSwitchLookAndFeel.h
tests/: CMakeLists.txt  ChorusTest.cpp  EnvelopeTest.cpp  FilterTest.cpp  HpfTest.cpp  JuceTestExample.cpp  LfoTest.cpp  Main.cpp  MasterVolumeTest.cpp  OscillatorTest.cpp  PresetManagerTest.cpp  TestAudioBufferInput.cpp  TestAudioBufferInput.h
tests/dsp/: ChorusTest.cpp  EnvelopeTest.cpp  FilterTest.cpp  HpfTest.cpp  LfoTest.cpp  MasterVolumeTest.cpp  OscillatorTest.cpp
tests/dsp/util/: AudioBufferMock.h  PositionInfoMock.h  TestAudioBufferInput.h
tests/services/: AudioProcessorStateMock.h  PresetManagerTest.cpp  PresetsForTest.h  TmpFileManagerTest.cpp
tests/synth/: SynthEngineTest.cpp  SynthParamsMock.h  SynthVoiceMock.h
tests/tools/: copy_preset_file.sh
